--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng4-geoautocomplete": "^0.1.0",
+    "ngx-order-pipe": "^2.0.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
